[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/ui/Login/background.jpg" type="Texture" id=1]
[ext_resource path="res://assets/ui/Fonts/PokemonGb-RAeo.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/entities/player/knight 2 no weapon.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/entities/player/knight 3 no weapon.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/entities/player/knight 1 no weapon.png" type="Texture" id=5]
[ext_resource path="res://interface/CharacterSelection.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/Fonts/PatrickHand-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/ui/button_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/button.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="DynamicFont" id=22]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=23]
font_data = ExtResource( 7 )

[node name="CharacterCreation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTexture" type="TextureRect" parent="."]
modulate = Color( 0.298039, 0.298039, 0.298039, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -160.0
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 320, 320 )
texture = ExtResource( 1 )

[node name="SelectScreen" type="VBoxContainer" parent="NinePatchRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 320, 320 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer6" type="MarginContainer" parent="NinePatchRect/SelectScreen"]
margin_right = 320.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )

[node name="Label3" type="Label" parent="NinePatchRect/SelectScreen"]
margin_top = 46.0
margin_right = 320.0
margin_bottom = 87.0
rect_min_size = Vector2( 320, 40 )
custom_fonts/font = SubResource( 1 )
text = "Character
Selection"
align = 1
valign = 1

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/SelectScreen"]
margin_top = 91.0
margin_right = 320.0
margin_bottom = 133.0
rect_min_size = Vector2( 0, 42 )

[node name="HBoxContainer4" type="HBoxContainer" parent="NinePatchRect/SelectScreen"]
margin_top = 137.0
margin_right = 320.0
margin_bottom = 201.0
rect_min_size = Vector2( 320, 64 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="NinePatchRect/SelectScreen/HBoxContainer4"]
margin_left = 40.0
margin_right = 104.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="MarginContainer5" type="MarginContainer" parent="NinePatchRect/SelectScreen/HBoxContainer4"]
margin_left = 108.0
margin_right = 124.0
margin_bottom = 64.0
rect_min_size = Vector2( 16, 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="NinePatchRect/SelectScreen/HBoxContainer4"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="MarginContainer6" type="MarginContainer" parent="NinePatchRect/SelectScreen/HBoxContainer4"]
margin_left = 196.0
margin_right = 212.0
margin_bottom = 64.0
rect_min_size = Vector2( 16, 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="NinePatchRect/SelectScreen/HBoxContainer4"]
margin_left = 216.0
margin_right = 280.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="MarginContainer5" type="MarginContainer" parent="NinePatchRect/SelectScreen"]
margin_top = 205.0
margin_right = 320.0
margin_bottom = 247.0
rect_min_size = Vector2( 0, 42 )

[node name="HBoxContainer5" type="HBoxContainer" parent="NinePatchRect/SelectScreen"]
margin_top = 251.0
margin_right = 320.0
margin_bottom = 283.0
rect_min_size = Vector2( 320, 32 )
alignment = 1

[node name="ChangeToCreateButton" type="TextureButton" parent="NinePatchRect/SelectScreen/HBoxContainer5"]
margin_left = 86.0
margin_right = 158.0
margin_bottom = 32.0
rect_min_size = Vector2( 72, 32 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/SelectScreen/HBoxContainer5/ChangeToCreateButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -19.5
margin_right = 19.5
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "Create"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="NinePatchRect/SelectScreen/HBoxContainer5"]
margin_left = 162.0
margin_right = 234.0
margin_bottom = 32.0
rect_min_size = Vector2( 72, 32 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/SelectScreen/HBoxContainer5/TextureButton2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.0
margin_right = 25.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateScreen" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 320, 320 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/CreateScreen"]
margin_top = 11.0
margin_right = 320.0
margin_bottom = 52.0
rect_min_size = Vector2( 320, 40 )
custom_fonts/font = SubResource( 1 )
text = "Character
Creation"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/CreateScreen"]
margin_top = 56.0
margin_right = 320.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 42 )

[node name="Label2" type="Label" parent="NinePatchRect/CreateScreen"]
margin_top = 102.0
margin_right = 320.0
margin_bottom = 122.0
rect_min_size = Vector2( 320, 20 )
custom_fonts/font = SubResource( 3 )
text = "Select a Character"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/CreateScreen"]
margin_top = 126.0
margin_right = 320.0
margin_bottom = 190.0
rect_min_size = Vector2( 320, 64 )
alignment = 1

[node name="TextureButton" type="TextureButton" parent="NinePatchRect/CreateScreen/HBoxContainer"]
margin_left = 60.0
margin_right = 124.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="NinePatchRect/CreateScreen/HBoxContainer/TextureButton"]
position = Vector2( 32, 16 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="TextureButton2" type="TextureButton" parent="NinePatchRect/CreateScreen/HBoxContainer"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="NinePatchRect/CreateScreen/HBoxContainer/TextureButton2"]
position = Vector2( 32, 16 )
scale = Vector2( 2, 2 )
frames = SubResource( 15 )

[node name="TextureButton3" type="TextureButton" parent="NinePatchRect/CreateScreen/HBoxContainer"]
margin_left = 196.0
margin_right = 260.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="NinePatchRect/CreateScreen/HBoxContainer/TextureButton3"]
position = Vector2( 32, 16 )
scale = Vector2( 2, 2 )
frames = SubResource( 21 )

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/CreateScreen"]
margin_top = 194.0
margin_right = 320.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/CreateScreen"]
margin_top = 224.0
margin_right = 320.0
margin_bottom = 256.0
rect_min_size = Vector2( 320, 24 )
alignment = 1

[node name="Label" type="Label" parent="NinePatchRect/CreateScreen/HBoxContainer2"]
margin_left = 62.0
margin_top = 8.0
margin_right = 133.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 22 )
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="NinePatchRect/CreateScreen/HBoxContainer2"]
margin_left = 137.0
margin_right = 257.0
margin_bottom = 32.0
rect_min_size = Vector2( 120, 24 )
custom_fonts/font = SubResource( 23 )
max_length = 12

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/CreateScreen"]
margin_top = 260.0
margin_right = 320.0
margin_bottom = 272.0
rect_min_size = Vector2( 0, 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/CreateScreen"]
margin_top = 276.0
margin_right = 320.0
margin_bottom = 308.0
rect_min_size = Vector2( 320, 32 )
alignment = 1

[node name="CreateConfirm" type="TextureButton" parent="NinePatchRect/CreateScreen/HBoxContainer3"]
margin_left = 86.0
margin_right = 158.0
margin_bottom = 32.0
rect_min_size = Vector2( 72, 32 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/CreateScreen/HBoxContainer3/CreateConfirm"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.0
margin_right = 25.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Confirm"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateBackButton" type="TextureButton" parent="NinePatchRect/CreateScreen/HBoxContainer3"]
margin_left = 162.0
margin_right = 234.0
margin_bottom = 32.0
rect_min_size = Vector2( 72, 32 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/CreateScreen/HBoxContainer3/CreateBackButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.0
margin_right = 25.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NinePatchRect/SelectScreen/HBoxContainer5/ChangeToCreateButton" to="." method="_on_ChangeToCreateButton_pressed"]
[connection signal="pressed" from="NinePatchRect/CreateScreen/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="NinePatchRect/CreateScreen/HBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="NinePatchRect/CreateScreen/HBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="NinePatchRect/CreateScreen/HBoxContainer3/CreateBackButton" to="." method="_on_CreateBackButton_pressed"]
